--- a/app/views/interested-party/v3/check-answers.html
+++ b/app/views/interested-party/v3/check-answers.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %}
 
-{% set pageref = "###" %}
-{% extends "layout.html" %}
-
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
@@ -17,7 +14,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
   {{ govukBackLink({
@@ -69,10 +66,14 @@
         </div>
         <div class="govuk-summary-list__row pins-summary-list__row--last">
           <dt class="govuk-summary-list__key">
-            Comment
+            Comments
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body">Avenue appeal comments - 12 Jan 2022.txt (0.21MB file)</p>
+            <ul class="govuk-list">
+              {% for file in data['comments'] %}
+                <li><a href="javascript:preventDefault();">{{ file }}</a></li>
+              {% endfor %}
+            </ul>
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="comment-upload?checking=1">
