--- a/app/views/interested-party/v3/comment-upload.html
+++ b/app/views/interested-party/v3/comment-upload.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %}
 
-{% set pageref = "###" %}
-{% extends "layout.html" %}
-
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
@@ -40,17 +37,12 @@
           {{ title }}
         </h1>
 
-        {{ govukFileUpload({
-          id: "comments-file",
-          name: "comments-file",
-          formGroup: {
-            classes: "govuk-!-margin-bottom-3"
-          },
-          label: {
-            classes: "govuk-label--m govuk-!-margin-top-8",
-            text: "Upload a file"
-          }
-        }) }}
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="upload-multiple">
+            Drag and drop or choose files
+          </label>
+          <input class="govuk-file-upload pins-file-upload" id="comments-file" name="comments-file" type="file" multiple>
+        </div>
 
         {{ govukDetails({
           summaryText: "Files you can upload",
