Multi-upload information on relevant screens

--- a/app/views/interested-party/v3/comment-upload-list.html
+++ b/app/views/interested-party/v3/comment-upload-list.html
@@ -53,7 +53,7 @@
                 <td scope="row" class="govuk-table__cell"><a href="javascript:peventDefault();">{{ file }}</a></td>
                 <td class="govuk-table__cell govuk-table__cell--numeric">
                   <a class="govuk-link" href="/interested-party/v3/comment-delete?row={{ i }}">
-                    Delete<span class="govuk-visually-hidden"> {{document.name}}</span>
+                    Delete<span class="govuk-visually-hidden"> {{ file }}</span>
                   </a>
                 </td>
               </tr>
