--- a/app/views/interested-party/v3/comment-upload.html
+++ b/app/views/interested-party/v3/comment-upload.html
@@ -56,12 +56,11 @@
               <li>DOC</li>
               <li>DOCX</li>
               <li>PDF</li>
-
-              <!-- <li>DOC or DOCX</li>
+              <li>DOC or DOCX</li>
               <li>JPG or JPEG</li>
               <li>PDF</li>
               <li>PNG</li>
-              <li>TIF or TIFF</li> -->
+              <li>TIF or TIFF</li>
             </ul>
 
             <p>
