--- a/app/views/interested-party/v3/check-answers.html
+++ b/app/views/interested-party/v3/check-answers.html
@@ -37,6 +37,9 @@
         {{ title }}
       </h1>
 
+    </div>
+    <div class="govuk-grid-column-full">
+
       <!-- <h2 class="govuk-heading-m">Your comment</h2> -->
 
       <dl class="govuk-summary-list">
@@ -69,10 +72,15 @@
         </div>
         <div class="govuk-summary-list__row pins-summary-list__row--last">
           <dt class="govuk-summary-list__key">
-            Comment
+            Comments
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body">Avenue appeal comments - 12 Jan 2022.txt (0.21MB file)</p>
+            {% set i = 0 %}
+            {% for file in data['comments'] %}
+              {% set i = i + 1 %}
+              <p class="govuk-body">{{ file }}</p>
+            {% endfor %}
+
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="comment-upload?checking=1">
