AS-4366 AS-4394 AS-4396
Addition of full appeal reference to sidebar in LPD Final comments and Statement of case

--- a/app/views/lpa-questionnaire/fullv2/_appeal-details.html
+++ b/app/views/lpa-questionnaire/fullv2/_appeal-details.html
@@ -3,13 +3,18 @@
 <dl class="govuk-summary-list govuk-summary-list-appealdetails">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
+      Appeal reference
+    </dt>
+    <dd class="govuk-summary-list__value">
+      APP/Q9999/D/21/1345264
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
       Planning application number
     </dt>
     <dd class="govuk-summary-list__value">
-      {{govukTag({
-        text: "21/05058/FUL",
-        classes: "govuk-tag--green"
-      })}}
+      21/05058/FUL    
     </dd>
   </div>
   <div class="govuk-summary-list__row">
