--- a/app/views/final-comments/v1/_lpd-details.html
+++ b/app/views/final-comments/v1/_lpd-details.html
@@ -5,6 +5,14 @@
       <dl class="govuk-summary-list govuk-summary-list-appealdetails">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
+            Appeal reference
+          </dt>
+          <dd class="govuk-summary-list__value">
+            APP/Q9999/D/21/1345264
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
             Planning application number
           </dt>
           <dd class="govuk-summary-list__value">
