--- a/app/views/before-you-start/v10/shutter/out-of-time-no-decision.html
+++ b/app/views/before-you-start/v10/shutter/out-of-time-no-decision.html
@@ -18,7 +18,7 @@
       <p>
 
       <p class="govuk-body">
-        Your deadline was {{ data['appealsub-'+version+'-beforeyoustart-deadline-day'] }} {{ data['appealsub-'+version+'-beforeyoustart-deadline-month'] | formatMonth }} {{ data['appealsub-'+version+'-beforeyoustart-deadline-year'] }}. This is 6 months from the decision date.
+        Your deadline was {{ data['bys-'+version+'-deadline-day'] }} {{ data['bys-'+version+'-deadline-month'] | formatMonth }} {{ data['bys-'+version+'-deadline-year'] }}. This is 6 months from the decision date.
       <p>
 
     </div>
