Added Jira ticket for BYS v10 (standalone)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,9 +58,6 @@
                       <li>
                         <a href="/before-you-start/v10/">Start 'Before you start'</a>
                       </li>
-                      <li>
-                        <a href="/before-you-start/v10/skip/full-bys-cya">Start from check your answers in 'Before you start'</a>
-                      </li>
                     </ul>
                     <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
@@ -74,22 +71,18 @@
                         </ul>
                       </div>
                     </details-->
-                    <!--details class="govuk-details" data-module="govuk-details">
+                    <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (5)
+                          Jira Tickets (1)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4086" target="_blank">AS-4086 Revert to getting plans from appellant</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4412" target="_blank">AS-4412 Fix upload fields to not overwrite previously uploaded file when blank</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4108" target="_blank">AS-4108 Full Planning - Notify Appeal Valid/Start Comms</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4252" target="_blank">AS-4252 Submission confirmation email (GovNotify) - appellant/agent</a></li>
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4362" target="_blank">AS-4362 Appellant notification email: statement of case and IP comments / final comments prompt</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4484" target="_blank">AS-4484 Amendment 'Before you start' journey for Prior Approval and vary/remove a condition</a></li>
                         </ul>
                       </div>
-                    </details-->
+                    </details>
                   </div>
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
