AS-4363 LPD email - final comments prompt

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -27,6 +27,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "pins/task-list";
 @import "pins/uploads";
 @import "pins/tables";
+@import "pins/email";
 
 
 .autocomplete__option {
@@ -113,3 +114,4 @@ $govuk-assets-path: '/govuk/assets/';
 .remove-bottom-border {
 	border-bottom: none;
 }
+
