Content tweaks, addition of local planning IP notice template

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -382,6 +382,45 @@
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id="accordion-default-heading-interestedparties">
+                  Local planning department
+                </span>
+              </h2>
+            </div>
+
+            <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
+              <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                {{ govukTag({
+                  classes: "govuk-tag--red govuk-!-margin-bottom-1",
+                  text: "WIP"
+                }) }}
+
+                <span class="govuk-caption-m">Sprint Cote d’Ivoire</span>
+                <h3 class="govuk-heading-m">
+                  Interested party LPD notice template
+                </h3>
+
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/local-planning-department/v1/householder-appeal-first-notice-template" class="govuk-link--no-visited-state">
+                      Interested party appeal notice (template)
+                    </a>
+                  </li>
+
+                </ul>
+
+                <!-- jira tickets etc -->
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="govuk-accordion__section">
+            <div class="govuk-accordion__section-header">
+              <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-interestedparties">
                   Interested parties
                 </span>
               </h2>
@@ -389,6 +428,7 @@
 
             <div id="accordion-default-content-interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
 
+              <!-- sprint Cote d’Ivoire -->
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
