--- a/app/views/interested-party/v3/comment-received.html
+++ b/app/views/interested-party/v3/comment-received.html
@@ -41,7 +41,13 @@
         </div>
 
         <div class="govuk-panel__body">
-          Appeal reference: <strong>{{data['appealCode']}}</strong>
+          Appeal reference: <strong>
+            {% if data['appealCode'] %}
+              {{ data['appealCode'] }}
+            {% else %}
+              0166327
+            {% endif %}
+            </strong>
         </div>
       </div>
 
