--- a/app/views/local-planning-department/v1/householder-appeal-first-notice-template.html
+++ b/app/views/local-planning-department/v1/householder-appeal-first-notice-template.html
@@ -11,42 +11,38 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 {% block content %}
 
-<img src="{{ asset_path }}images/bcc-logo.png" width="150" class="govuk-!-margin-bottom-6" />
-
-<p>
-  Bristol City Council Planning Department, Atlas Buildings<br>
-  Sedgemore Road, Bristol BS1 6XN
-</p>
+<!-- <img src="{{ asset_path }}images/bcc-logo.png" width="150" class="govuk-!-margin-bottom-6" /> -->
 
 <p class="govuk-!-margin-bottom-9">
-  <strong>[Your name]</strong><br>
-  Atlas Buildings<br>
-  Sedgemore Road<br>
-  Bristol<br>
-  BS1 6XN
+  <strong>(Interested party name)</strong><br>
+  ((Interested party address line 1))<br>
+  ((Interested party address line 2))<br>
+  ((Interested party county, town or city))<br>
+  ((Interested party postcode))
 </p>
 
 <p class="govuk-body">
   <strong>Appeal reference</strong><br>
-  0166327
+  ((appeal reference))
 </p>
 
 <p class="govuk-body">
   <strong>Appeal site</strong><br>
-  1 Aubrey House
-  Aubrey Road
-  Bristol BS3 3EX
+  ((Appeal site address line 1))<br>
+  ((Appeal site address line 2))<br>
+  ((Appeal site county, town or city))<br>
+  ((Appeal site postcode))
 </p>
 
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
     <!-- <p class="govuk-body">Planning appeal reference: A/1234567</p> -->
-    <p class="govuk-body">Dear [Your name],</p>
+    <p class="govuk-body">Dear ((Interested party name)),</p>
     <!-- <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/10112454</strong>.</p> -->
 
     <p class="govuk-body">
-      J.M. Wigstone is appealing Bristol City Council's decision to refuse planning application A/10112454.
+      ((Applicant name)) is appealing ((name of local planning department))’s decision to refuse planning application ((planning application number)).
     </p>
 
     <p class="govuk-body">
@@ -58,7 +54,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      The Planning Inspectorate makes a decision based on written statements from the applicant, Bristol City Council, and interested parties.
+      The Planning Inspectorate makes a decision based on written statements from the applicant, ((name of local planning department)), and interested parties.
     </p>
 
     <h2 class="govuk-heading-m">
@@ -70,7 +66,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h3>
 
     <p class="govuk-body">
-      You can comment on the appeal until 11.59pm on 4 May 2022.
+      You can comment on the appeal until ((time)) on ((day)) ((month)) ((year)).
     </p>
 
     <p class="govuk-body">
@@ -82,7 +78,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      You will need to enter the appeal reference: <strong>0166327</strong>.
+      You will need to enter the appeal reference: <strong>((appeal reference number))</strong>.
     </p>
 
     <h3 class="govuk-heading-s">
@@ -98,7 +94,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h3>
 
     <p class="govuk-body">
-      You can withdraw any comments you've made in the past. You can do this by emailing enquiries@planninginspectorate.gov.uk by 11.59pm on 4 May 2022.
+      You can withdraw any comments you've made in the past. You can do this by emailing enquiries@planninginspectorate.gov.uk by ((time)) on ((date)) ((month)) ((year)).
     </p>
 
     <h3 class="govuk-heading-s">
@@ -106,7 +102,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h3>
 
     <p class="govuk-body">
-      You can view the appeal details of the planning application at https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-application
+      You can view the appeal details of the planning application at ((link to where the decision will be published))
     </p>
 
     <h2 class="govuk-heading-m">
@@ -118,12 +114,12 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </p>
 
     <p class="govuk-body">
-      The Planning Inspectorate will publish the decision online at https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-applications
+      The Planning Inspectorate will publish the decision online at ((link to where the decision will be published))
     </p>
 
     <p class="govuk-body">
       Thank you,​<br>
-      Bristol City Council Planning Department<br>
+      ((name of local planning department))
     </p>
 
   </div>
