--- a/app/views/local-planning-department/v1/householder-appeal-first-notice-template.html
+++ b/app/views/local-planning-department/v1/householder-appeal-first-notice-template.html
@@ -14,7 +14,11 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 <!-- <img src="{{ asset_path }}images/bcc-logo.png" width="150" class="govuk-!-margin-bottom-6" /> -->
 
 <p class="govuk-!-margin-bottom-9">
-  <strong>(Interested party name)</strong><br>
+  ((Local planning department’s address))
+</p>
+
+<p class="govuk-!-margin-bottom-9">
+  <strong>((Interested party name))</strong><br>
   ((Interested party address line 1))<br>
   ((Interested party address line 2))<br>
   ((Interested party county, town or city))<br>
@@ -86,7 +90,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h3>
 
     <p class="govuk-body">
-      You can request for the Planning Inspector to view the appeal site from your property. You can request this by emailing enquiries@planninginspectorate.gov.uk
+      You can request for the Planning Inspector to view the appeal site from your property. You can request this by emailing ((PINs email address))
     </p>
 
     <h3 class="govuk-heading-s">
@@ -94,7 +98,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
     </h3>
 
     <p class="govuk-body">
-      You can withdraw any comments you've made in the past. You can do this by emailing enquiries@planninginspectorate.gov.uk by ((time)) on ((date)) ((month)) ((year)).
+      You can withdraw any comments you've made in the past. You can do this by emailing ((PINs email address)) by ((time)) on ((date)) ((month)) ((year)).
     </p>
 
     <h3 class="govuk-heading-s">
